# yt-dl-manager

./: .env.example  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  add_to_queue.py  daemon.py  db_utils.py  migrate_db.py  plan.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  copilot-instructions.md.
.github/workflows/: pylint.yml  test.yml
test_env/: pyvenv.cfg
tests/: .pylintrc  test_add_to_queue.py  test_create_config.py  test_daemon.py  test_db_utils.py  test_i18n.py  test_maintenance.py  test_queue.py  test_tui.py  test_utils.py  test_web_ui.py  test_web_ui_background.py
yt_dl_manager/: .pylintrc  __init__.py  __main__.py  add_to_queue.py  config.py  create_config.py  daemon.py  db_utils.py  download_utils.py  i18n.py  logging_config.py  maintenance.py  queue.py  tui.py  web_ui.py
yt_dl_manager/locale/de/LC_MESSAGES/: yt-dl-manager.mo  yt-dl-manager.po
yt_dl_manager/static/css/: style.css
yt_dl_manager/templates/: base.html  dashboard.html
yt_dl_manager/templates/partials/: completed.html  in_progress.html  pending.html  status_bar.html  toast.html
